# miniapp_keyboard-penai

./: .gitignore  README.md  build.sh  install.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
jsapi/: CMakeLists.txt  Makefile
jsapi/iot-miniapp-sdk/include/jqutil_v2/: JQDefs.h
jsapi/lib/curl/lib/: libcurl.la  libcurl.so.4.8.0
jsapi/lib/curl/lib/pkgconfig/: libcurl.pc
jsapi/lib/curl/share/man/man1/: curl.1
jsapi/lib/openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
jsapi/lib/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
jsapi/lib/openssl/share/man/man1/: CA.pl.1  asn1parse.1  ca.1  ciphers.1  cms.1  crl.1  crl2pkcs7.1  dgst.1  dhparam.1  dsa.1  dsaparam.1  ec.1  ecparam.1  enc.1  engine.1  errstr.1  gendsa.1  genpkey.1  genrsa.1  list.1  nseq.1  ocsp.1  openssl.1  passwd.1  pkcs12.1  pkcs7.1  pkcs8.1  pkey.1  pkeyparam.1  pkeyutl.1  prime.1  rand.1  rehash.1  req.1  rsa.1  rsautl.1  s_client.1  s_server.1  s_time.1  sess_id.1  (+10 more)
jsapi/lib/openssl/share/man/man3/: ADMISSIONS.3  ASN1_INTEGER_get_int64.3  ASN1_ITEM_lookup.3  ASN1_OBJECT_new.3  ASN1_STRING_TABLE_add.3  ASN1_STRING_length.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TIME_set.3  ASN1_TYPE_get.3  ASN1_generate_nconf.3  ASYNC_WAIT_CTX_new.3  ASYNC_start_job.3  BF_encrypt.3  BIO_ADDR.3  BIO_ADDRINFO.3  BIO_connect.3  BIO_ctrl.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_cipher.3  BIO_f_md.3  BIO_f_null.3  BIO_f_ssl.3  BIO_find_type.3  BIO_get_data.3  BIO_get_ex_new_index.3  BIO_meth_new.3  BIO_new.3  BIO_new_CMS.3  BIO_parse_hostserv.3  BIO_printf.3  BIO_push.3  BIO_read.3  BIO_s_accept.3  BIO_s_bio.3  BIO_s_connect.3  BIO_s_fd.3  BIO_s_file.3  BIO_s_mem.3  (+427 more)
jsapi/lib/openssl/share/man/man5/: config.5  x509v3_config.5
jsapi/lib/openssl/share/man/man7/: Ed25519.7  RAND.7  RAND_DRBG.7  RSA-PSS.7  SM2.7  X25519.7  bio.7  crypto.7  ct.7  des_modes.7  evp.7  ossl_store-file.7  ossl_store.7  passphrase-encoding.7  proxy-certificates.7  scrypt.7  ssl.7  x509.7
jsapi/lib/sqlite/lib/: libsqlite3.so.3.49.1
jsapi/lib/sqlite/lib/pkgconfig/: sqlite3.pc
jsapi/src/: AI.cpp  AI.hpp  Fetch.cpp  Fetch.hpp  JSAI.cpp  JSAI.hpp  JSAPI.cpp  JSFoo.cpp  JSFoo.hpp  JSFooWifi.cpp  JSFooWifi.hpp  Temp.md  strUtils.cpp  strUtils.hpp
jsapi/src/AI/: AI.cpp  AI.hpp  AICallback.hpp  AddUserMessageResponse.hpp  BaseResponse.cpp  BaseResponse.hpp  ChatCompletionResponse.cpp  ChatCompletionResponse.hpp  ConversationInfo.cpp  ConversationInfo.hpp  ConversationListResponse.hpp  ConversationManager.cpp  ConversationManager.hpp  ConversationNode.cpp  ConversationNode.hpp  JSAI.cpp  JSAI.hpp  ModelsResponse.cpp  ModelsResponse.hpp  SettingsResponse.cpp  SettingsResponse.hpp  UserBalanceResponse.cpp  UserBalanceResponse.hpp
jsapi/src/Database/: Database.cpp  Database.hpp  Delete.cpp  Delete.hpp  Insert.cpp  Insert.hpp  Select.cpp  Select.hpp  Size.cpp  Size.hpp  Table.cpp  Table.hpp  Truncate.cpp  Truncate.hpp  Update.cpp  Update.hpp
jsapi/src/IME/: IME.cpp  IME.hpp  JSIME.cpp  JSIME.hpp
jsapi/toolchain/arm-buildroot-linux-gnueabihf/: README.txt  br_fragment  buildroot.config  summary.csv
jsapi/toolchain/arm-buildroot-linux-gnueabihf/arm-buildroot-linux-gnueabihf/lib/: libasan.la  libasan.so.4.0.0  libatomic.la  libatomic.so.1.2.0  libcilkrts.la  libcilkrts.so.5.0.0  libitm.la  libitm.so.1.0.0  libstdc++.la  libstdc++.so.6.0.24  libstdc++fs.la  libsupc++.la  libubsan.la  libubsan.so.0.0.0
jsapi/toolchain/arm-buildroot-linux-gnueabihf/arm-buildroot-linux-gnueabihf/sysroot/sbin/: ldconfig  sln
jsapi/toolchain/arm-buildroot-linux-gnueabihf/arm-buildroot-linux-gnueabihf/sysroot/usr/include/asm/: ..install.cmd
jsapi/toolchain/arm-buildroot-linux-gnueabihf/arm-buildroot-linux-gnueabihf/sysroot/usr/include/asm-generic/: ..install.cmd
jsapi/toolchain/arm-buildroot-linux-gnueabihf/arm-buildroot-linux-gnueabihf/sysroot/usr/include/drm/: ..install.cmd
jsapi/toolchain/arm-buildroot-linux-gnueabihf/arm-buildroot-linux-gnueabihf/sysroot/usr/lib/: libstdc++.so.6.0.24-gdb.py
jsapi/toolchain/arm-buildroot-linux-gnueabihf/arm-buildroot-linux-gnueabihf/sysroot/usr/sbin/: iconvconfig  nscd  zdump  zic
jsapi/toolchain/arm-buildroot-linux-gnueabihf/include/: gmp.h
jsapi/toolchain/arm-buildroot-linux-gnueabihf/lib/: libcc1.la  libcc1.so.0.0.0  libexpat.la  libexpat.so.1.6.7  libform.so.6.1  libgmp.la  libgmp.so.10.3.2  libmenu.so.6.1  libmpc.la  libmpc.so.3.0.0  libmpfr.la  libmpfr.so.4.1.6  libncurses.so.6.1  libpanel.so.6.1
jsapi/toolchain/arm-buildroot-linux-gnueabihf/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xbn  armelf_linux_eabi.xc  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdw  armelf_linux_eabi.xn  armelf_linux_eabi.xs  armelf_linux_eabi.xsc  armelf_linux_eabi.xsw  armelf_linux_eabi.xw  armelfb_linux_eabi.x  armelfb_linux_eabi.xbn  armelfb_linux_eabi.xc  armelfb_linux_eabi.xd  armelfb_linux_eabi.xdc  armelfb_linux_eabi.xdw  armelfb_linux_eabi.xn  armelfb_linux_eabi.xs  armelfb_linux_eabi.xsc  armelfb_linux_eabi.xsw  armelfb_linux_eabi.xw
jsapi/toolchain/arm-buildroot-linux-gnueabihf/lib/pkgconfig/: expat.pc
jsapi/toolchain/arm-buildroot-linux-gnueabihf/libexec/: rmt
jsapi/toolchain/arm-buildroot-linux-gnueabihf/libexec/awk/: grcat  pwcat
jsapi/toolchain/arm-buildroot-linux-gnueabihf/libexec/gcc/arm-buildroot-linux-gnueabihf/7.3.0/: collect2  liblto_plugin.la  liblto_plugin.so.0.0.0  lto-wrapper
jsapi/toolchain/arm-buildroot-linux-gnueabihf/libexec/gcc/arm-buildroot-linux-gnueabihf/7.3.0/plugin/: gengtype
jsapi/toolchain/arm-buildroot-linux-gnueabihf/share/awk/: group.awk  passwd.awk
jsapi/toolchain/arm-buildroot-linux-gnueabihf/share/buildroot/: sdk-location  toolchainfile.cmake
jsapi/toolchain/arm-buildroot-linux-gnueabihf/share/info/: libitm.info
jsapi/toolchain/arm-buildroot-linux-gnueabihf/share/man/man1/: arm-buildroot-linux-gnueabihf-gcc.1  arm-buildroot-linux-gnueabihf-gdb.1  arm-buildroot-linux-gnueabihf-gdbserver.1  arm-buildroot-linux-gnueabihf-ld.1
jsapi/toolchain/arm-buildroot-linux-gnueabihf/share/man/man5/: arm-buildroot-linux-gnueabihf-gdbinit.5
(+121 files in other folders)
